data/test/regression/type_check/fail/issue_45b.v
// localparam can't have a recursive definition

localparam A=A;
